2008-05-19  Torsten Rahn  <rahn@kde.org> 

    Fixing the regression that made tile updates fail.

    * src/lib/MergedLayerDecorator.cpp:
    * src/lib/TileLoader.cpp:
    * src/lib/HttpDownloadManager.cpp:
    * src/lib/MarbleModel.cpp:

    - Fixing missing rawloadTile execution after
      image download. 
    - Minor cleaning ...

2008-05-19  Jens-Michael Hoffmann  <jensmh@gmx.de>

    * src/lib/TileLoaderHelper.cpp

    Fix function downloadUrl: Do not ignore the value of the
    path attribute.

2008-05-19  Jens-Michael Hoffmann  <jensmh@gmx.de>

    * src/lib/geodata/scene/GeoSceneTexture.cpp

    Set m_downloadUrl to "http://download.kde.org/apps/marble/"
    as default, so we do not need to edit all .dgml files.

2008-05-19  Jens-Michael Hoffmann  <jensmh@gmx.de>

    * src/lib/TileLoaderHelper.h
    * src/lib/TileLoaderHelper.cpp

    Part 14 of groundwork for OpenStreetMap texture tiles.
    Add function downloadUrl to TileLoaderHelper which makes use of
    the new downloadUrl element.

2008-05-19  Jens-Michael Hoffmann  <jensmh@gmx.de>

    * src/lib/geodata/handlers/dgml/DgmlElementDictionary.h
    * src/lib/geodata/handlers/dgml/DgmlElementDictionary.cpp
    Add dgmlTag_DownloadUrl.

    * src/lib/geodata/handlers/dgml/DgmlAttributeDictionary.h
    * src/lib/geodata/handlers/dgml/DgmlAttributeDictionary.cpp
    Add dgmlAttr_host, dgmlAttr_password, dgmlAttr_path,
    dgmlAttr_port, dgmlAttr_protocol and dgmlAttr_user.

    * src/lib/geodata/handlers/dgml/DgmlDownloadUrlTagHandler.cpp
    * src/lib/geodata/handlers/dgml/DgmlDownloadUrlTagHandler.h
    Add class DgmlDownloadUrlTagHandler.

    * src/lib/geodata/scene/GeoSceneTexture.cpp
    * src/lib/geodata/scene/GeoSceneTexture.h
    Add member variable m_downloadUrl and get+set method.

    * src/lib/geodata/CMakeLists.txt
    Add DgmlDownloadUrlTagHandler.cpp.

    * docs/dgml2.dtd
    Add element downloadUrl.

    * data/maps/earth/openstreetmap/openstreetmap.dgml
    Add downloadUrl.
