@@ -1,3 +1,12 @@
+2008-05-16  Claudiu Covaci  <claudiu.covaci@gmail.com>
+
+    * src/lib/MarbleModel.{h,cpp}:
+    * src/lib/SunLocator.{h,cpp}:
+    - removed instance of ExtDateTime from SunLocator 
+    - ExtDateTime is now instantiased in MarbleModel which
+    should provide a Marble-wide access to the extended date 
+    and time class.
+
 2008-05-19  Torsten Rahn  <rahn@kde.org> 
 
     Fixing the regression that made tile updates fail.
